<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Long Weekend</string>
    <string name="action_settings">Settings</string>

    <!--Long Weekend-->
    <string name="yourDateHint">Date:</string>
    <string name="yourDate">2013-09-12</string>
    <string name="longweekendMessage">Click the date and pick the appropriate date from the dialog. Then click the button to desire long weekend</string>
    <string name="longweekendBefore">Get Long Weekends Before the Date</string>
    <string name="longweeekendAfter">Get Long Weekends After the Date</string>
    <string name="longweekendBoth">Get the Long Weekends Before and After the Date</string>
    <string name="longWeekend">Get Long Weekend</string>

    <!--Holidays From-->
    <string name="beginDate">2012-11-11</string>
    <string name="holidayfromMessage">Click the date and pick the appropriate date from the dialog. Then click the button to get the holidays from the specified date</string>
    <string name="holidaysFrom">Get Holidays From</string>

    <!--Holidays Between-->
    <string name="startDateHint">Start Date:</string>
    <string name="startDate">2012-01-01</string>
    <string name="endDateHint">End Date:</string>
    <string name="endDate">2012-08-12</string>
    <string name="holidaysbetweenMessage">Click the date and pick the appropriate date from the dialog. Then click the button to get the holidays between the specified dates</string>
    <string name="holidaysBetween">Get Holidays Between</string>

</resources>
