<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LongWeekend" >


    <TextView
            android:id="@+id/longweekendMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:text="@string/longweekendMessage"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:clickable="false"
            android:layout_alignParentTop="true"
            android:layout_alignLeft="@+id/longweekendOptionsGroup"/>

    <TextView
            android:id="@+id/yourDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:ems="10"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_below="@+id/longweekendMessage"
            android:layout_alignRight="@+id/longweekendOptionsGroup"/>

    <RadioGroup
            android:id="@+id/longweekendOptionsGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/yourDate" >

        <RadioButton
                android:id="@+id/longweekendBefore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/longweekendBefore"
                android:checked="true"/>


        <RadioButton
                android:id="@+id/longweekendAfter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/longweeekendAfter" />

        <RadioButton
                android:id="@+id/longweekendBoth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/longweekendBoth" />

    </RadioGroup>

    <Button
            android:id="@+id/findLongweekendButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/longweekendOptionsGroup"
            android:text="@string/longWeekend" />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/yourDateHint"
            android:id="@+id/textView"
            android:layout_above="@+id/longweekendOptionsGroup"
            android:layout_toLeftOf="@+id/yourDate"/>

</RelativeLayout>