<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HolidaysFrom" >

    <TextView
        android:id="@+id/beginDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:ems="10"
        android:text="@string/beginDate"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_below="@+id/holidaysfromMessage"
        android:layout_alignParentRight="true"/>

    <TextView
        android:id="@+id/startHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/startDateMessage"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_above="@+id/findHolidaysFrom"
        android:layout_toLeftOf="@+id/beginDate"/>

    <Button
        android:id="@+id/findHolidaysFrom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/holidaysFrom"
        android:layout_below="@+id/beginDate"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/holidaysfromMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/holidayfromMessage"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_alignWithParentIfMissing="false"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>

</RelativeLayout>